# hermem

./: .air.toml  .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yml  AGENTS.md  AGENTS.ru.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REFACTORING.md  RELEASE.md  SECURITY.md  TODO.md  TODO2.md  USAGE.md  config.go  config_test.go  db.go  docker-compose.yml  embedder.go  extractor.go  extractor_test.go  go.mod  go.sum  go.work  helpers_test.go  hermem.docker.ini  hermem.ini  ingestion.go  ingestion_test.go  install.sh  loadtest.sh  magefile.go  main.go  (+9 more)
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/: .golangci.yml  CODEOWNERS  CROSSCOMPILING.md  dependabot.yml
api/: builders.go  handler.go  openapi.go  openapi_test.go  paths.go  schemas.go  spec.go
completions/: hermem.bash  hermem.fish  hermem.zsh
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI.md  MCP.md  OPENAPI.md  ROADMAP.md  RUNBOOK.md  SDK.md  SERVER.md  USAGE.md  VISION.md  middleware-audit.md  migration-workflow.md  package-level-audit.md  perf-budgets.md  profiling.md  service-dependencies.md
ops/: README.md
scripts/: bench.sh  ensure-embed-placeholders.sh  install-mcp-test.sh  install-mcp.sh  pin-actions.sh
sdk/python/: pyproject.toml
sdk/python/examples/: main.py
sdk/python/hermem/: __init__.py  client.py  types.py
sdk/python/tests/: conftest.py  test_admin.py  test_client.py  test_graph.py  test_memory.py  test_task.py
src/: agent_loop.go  banner.go  banner_test.go  cache.go  community.go  db.go  (+41 more)
(+591 files in other folders)
