[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermem"
version = "0.1.0"
description = "Official Python SDK for the Hermem API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/pavelveter/hermem"
Documentation = "https://github.com/pavelveter/hermem/tree/main/sdk/python"
Repository = "https://github.com/pavelveter/hermem"

[tool.setuptools.packages.find]
include = ["hermem*"]
